--- a/src/components/SocialMedia.css
+++ b/src/components/SocialMedia.css
@@ -1,7 +1,7 @@
 /* Main container */
 .social-container {
   position: absolute;
-  left: -10px;          
+  left: 10px;
   bottom: 50px;
   display: flex;
   flex-direction: column;
@@ -26,21 +26,36 @@
   box-shadow: 0 0 15px rgba(0, 217, 255, 0.7);
 }
 
-.whatsapp { color: #25D366; }
-.linkedin { color: #0077b5; }
-.instagram { color: #e1306c; }
-.youtube { color: #ff0000; }
-.github { color: #ffffff; }
+.whatsapp {
+  color: #25D366;
+}
+
+.linkedin {
+  color: #0077b5;
+}
+
+.instagram {
+  color: #e1306c;
+}
+
+.youtube {
+  color: #ff0000;
+}
+
+.github {
+  color: #ffffff;
+}
 
 
 @media (min-width: 900px) {
   .social-container {
-    left: -50px;  
+    left: -50px;
     /* top: -100px;      */
   }
 }
+
 @media (max-width: 900px) {
   .social-container {
-    top: 50px     
+    top: 0px;
   }
 }
